<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/play_activity_background"
    tools:context="com.example.dimitris.touchmedemo.activity.PlayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp">

        <RelativeLayout
            android:id="@+id/topRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/timeRel"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:background="@color/play_activity_blue">

                <TextView
                    android:id="@+id/timeTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_activity_time"
                    android:textColor="@color/play_activity_primary_text"
                    android:textSize="20sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/scoreRel"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:background="@color/play_activity_blue">

                <TextView
                    android:id="@+id/scoreTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_activity_score"
                    android:textColor="@color/play_activity_primary_text"
                    android:textSize="20sp"/>
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/levelTxtView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topRel"
            android:layout_above="@+id/buttonRel"
            android:gravity="center"
            android:textColor="@color/play_activity_secondary_text"
            android:textSize="25sp"
            android:text="@string/play_activity_level"/>

        <RelativeLayout
            android:id="@+id/buttonRel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/green_button"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/startRel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/play_activity_blue">

        <TextView
            android:id="@+id/startTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_activity_start"
            android:textColor="@color/play_activity_primary_text"
            android:textSize="30sp"/>
    </RelativeLayout>

</RelativeLayout>
