<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_activity_background"
    tools:context="com.example.dimitris.touchmedemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"/>

        <RelativeLayout
            android:id="@+id/onePlayerRel"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@color/main_activity_green">

            <TextView
                android:id="@+id/onePlayerTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_one_player"
                android:textColor="@color/main_activity_primary_text"
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/twoPlayersRel"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@color/main_activity_blue">

            <TextView
                android:id="@+id/twoPlayersTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_two_players"
                android:textColor="@color/main_activity_primary_text"
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/exitRel"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@color/main_activity_red">

            <TextView
                android:id="@+id/exitTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_exit"
                android:textColor="@color/main_activity_primary_text"
                android:textSize="20sp"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
